--- a/views/users.jade
+++ b/views/users.jade
@@ -3,5 +3,6 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  a(href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx739b9f74ab475e99&redirect_uri=http%3A%2F%2Fqttzqqkqlw.proxy.qqbrowser.cc/users&response_type=code&scope=snsapi_userinfo&state=STATE&connect_redirect=1#wechat_redirect") click
-
+  a(href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx739b9f74ab475e99&redirect_uri=http%3A%2F%2Fqttzqqkqlw.proxy.qqbrowser.cc/users&response_type=code&scope=snsapi_userinfo&state=STATE&connect_redirect=1#wechat_redirect") 获取CODE
+  p 获取的值
+    span code #{code}
