绑定登录成功;

--- a/views/users.jade
+++ b/views/users.jade
@@ -6,3 +6,6 @@ block content
   a(href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx739b9f74ab475e99&redirect_uri=http%3A%2F%2Fqttzqqkqlw.proxy.qqbrowser.cc/users&response_type=code&scope=snsapi_userinfo&state=STATE&connect_redirect=1#wechat_redirect") 获取CODE
   p 获取的值
     span code #{code}
+  h2 测试登录
+  a(href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx739b9f74ab475e99&redirect_uri=http%3A%2F%2Fqttzqqkqlw.proxy.qqbrowser.cc&response_type=code&scope=snsapi_userinfo&state=STATE&connect_redirect=1#wechat_redirect") 获取CODE
+
